--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <title>Jobs</title>
 
   <link rel="stylesheet" href="css/normalize.css">
-  <!-- <link rel="stylesheet" href="css/styles.css"> -->
-  <link rel="stylesheet" href="./css/styles.mini.css">
+  <link rel="stylesheet" href="css/styles.css">
+  <!-- <link rel="stylesheet" href="./css/styles.mini.css"> -->
 </head>
 
 <body>
